fix: update spacing

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -261,7 +261,7 @@ ul {
     font-size: 24px;
     font-weight: 500;
     text-transform: uppercase;
-    letter-spacing: 6px;
+    letter-spacing: 3px;
 }
 
 #menu li a {
